--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,18 +35,31 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   animated_splash_screen: ^1.1.0
+  flutter_native_splash: ^2.2.0+1
+  flutter_launcher_icons: ^0.9.2
   bloc: ^8.0.2
   flutter_bloc: ^8.0.1
   dio: ^4.0.4
   conditional_builder_null_safety: ^0.0.6
-  shared_preferences: ^2.0.13
   qr_code_scanner: ^0.7.0
-  awesome_dialog: ^2.2.1
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+
+flutter_native_splash:
+  color: "#FFFFFF"
+  image: "assets/images/applogo.png"
+  android: true
+  iso: true
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/applogo.png"
+  remove_alpha_ios: true
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -66,8 +79,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/applogo.png
+    - assets/images/minilogo.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
