--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: attendance
-description: A new Flutter project.
+name: Attendance
+description: A new Flutter attendance project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -35,7 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   animated_splash_screen: ^1.1.0
-  flutter_native_splash: ^2.2.0+1
+  flutter_native_splash: ^2.1.6
   flutter_launcher_icons: ^0.9.2
   bloc: ^8.0.2
   flutter_bloc: ^8.0.1
